--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                 todayGame: true,
 
                 // ==== 暫時關閉 (hd_signIn,signinBar)====
-                temporary: true,
+                temporary: false,
             };
         },
         methods: {
