--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 <a href="https://reurl.cc/4a23dj" target="_blank">
                                     <div class="ft_icon">
                                         <img src="images/icon/icon-f-fb.png" 
-                                        alt=" alt="Link to official facebock.">
+                                        alt="Link to official facebock.">
                                     </div>
                                 </a>
                             </li>
