--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a href="mailto:topvnc88@gmail.com">
                                     <div class="btn_cnt">
                                         <img src="images/icon/icon-email.png" 
-                                        alt="Link to the official mailbox.">
+                                        alt="Link to the vnc88 mailbox.">
                                     </div>
                                 </a>
                             </li>
@@ -43,7 +43,7 @@
                                 <a href="https://reurl.cc/4a23dj" target="_blank">
                                     <div class="btn_cnt">
                                         <img src="images/icon/icon-fb.png" 
-                                        alt="Link to official facebock.">
+                                        alt="Link to vnc88 facebock.">
                                     </div>
                                 </a>
                             </li>
@@ -51,7 +51,7 @@
                                 <a href="page/qrcode.html" target="_blank">
                                     <div class="btn_cnt">
                                         <img src="images/icon/icon-zalo.png" 
-                                        alt="Link to the official Zalo QrCode page.">
+                                        alt="Link to the vnc88 Zalo QrCode page.">
                                     </div>
                                 </a>
                             </li>
@@ -59,7 +59,7 @@
                                 <a href="page/qrcode.html" target="_blank">
                                     <div class="btn_cnt">
                                         <img src="images/icon/icon-tg.png" 
-                                        alt="Link to the official Telegram QrCode page.">
+                                        alt="Link to the vnc88 Telegram QrCode page.">
                                     </div>
                                 </a>
                             </li>
@@ -330,7 +330,7 @@
                                 <a href="https://reurl.cc/4a23dj" target="_blank">
                                     <div class="ft_icon">
                                         <img src="images/icon/icon-f-fb.png" 
-                                        alt="Link to official facebock.">
+                                        alt="Link to vnc88 facebock.">
                                     </div>
                                 </a>
                             </li>
@@ -338,7 +338,7 @@
                                 <a href="https://reurl.cc/Q6nE6q" target="_blank">
                                     <div class="ft_icon">
                                         <img src="images/icon/icon-f-yt.png" 
-                                        alt="Link to official youtube.">
+                                        alt="Link to vnc88 youtube.">
                                     </div>
                                 </a>
                             </li>
