--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="VNC88 Được xếp vào một trong những trang web TOP nổi tiếng nhất tại Việt Nam, đặc biệt mang đến cho độc giả những tin thể thao hết sức hấp dẫn." />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/all.css?v1.0.0">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/vue@next"></script>
@@ -17,7 +17,7 @@
     <script src="js/router.js"></script>
     <script src="js/verifyCode.js"></script>
     <!-- 自訂義js -->
-    <script src="js/pageData.js"></script>
+    <script src="js/pageData.js?v1.0.0"></script>
     <title>VNC88</title>
 </head>
 
