--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <script src="js/verifyCode.js"></script>
     <!-- 自訂義js -->
     <script src="js/pageData.js?v1.0.0"></script>
+    <!-- google插件 -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WEEFB45HGY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-WEEFB45HGY');
+    </script>
     <title>VNC88</title>
 </head>
 
