--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
     <script src="js/pageData.js?v1.0.0"></script>
     <!-- google插件 -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WEEFB45HGY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-30FY56KDHN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() {
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
-        gtag('config', 'G-WEEFB45HGY');
+        gtag('config', 'G-30FY56KDHN');
     </script>
-    <title>VNC88</title>
 </head>
 
 <body>
