--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         gtag('js', new Date());
         gtag('config', 'G-30FY56KDHN');
     </script>
+     <title>VNC88</title>
 </head>
 
 <body>
