--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/vue@next"></script>
     <!-- 外掛插件 -->
-    <script src="js/swipeslider.js"></script>
-    <script src="js/marquee.js"></script>
-    <script src="js/router.js"></script>
-    <script src="js/verifyCode.js"></script>
+    <script src="js/swipeslider.js?v1.0.1"></script>
+    <script src="js/marquee.js?v1.0.1"></script>
+    <script src="js/router.js?v1.0.1"></script>
+    <script src="js/verifyCode.js?v1.0.1"></script>
     <!-- 自訂義js -->
-    <script src="js/pageData.js?v1.0.0"></script>
+    <script src="js/pageData.js?v1.0.1"></script>
     <!-- google插件 -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-30FY56KDHN"></script>
