--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- 外掛插件 -->
     <script src="js/swipeslider.js?v1.0.0"></script>
     <script src="js/marquee.js?v1.0.0"></script>
-    <script src="js/router.js?v1.0.2"></script>
+    <script src="js/router.js?v1.0.3"></script>
     <script src="js/verifyCode.js?v1.0.0"></script>
     <!-- 自訂義js -->
     <script src="js/pageData.js?v1.0.1"></script>
@@ -29,7 +29,7 @@
         gtag('js', new Date());
         gtag('config', 'G-30FY56KDHN');
     </script>
-     <title></title>
+     <title>VNC88</title>
 </head>
 
 <body>
