--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         gtag('js', new Date());
         gtag('config', 'G-30FY56KDHN');
     </script>
-     <title>VNC88 Website</title>
+     <!-- <title>VNC88</title> -->
 </head>
 
 <body>
