--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="VNC88 Được xếp vào một trong những trang web TOP nổi tiếng nhất tại Việt Nam, đặc biệt mang đến cho độc giả những tin thể thao hết sức hấp dẫn." />
+    <meta name="description" content="VNC88, tỷ số bóng đá, kết quả trực tuyến,lịch thi đấu" />
+    <meta name="keywords" content="VNC88, tỷ số bóng đá, kết quả trực tuyến,lịch thi đấu">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/all.css?v1.0.0">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
@@ -14,7 +15,7 @@
     <!-- 外掛插件 -->
     <script src="js/swipeslider.js?v1.0.0"></script>
     <script src="js/marquee.js?v1.0.0"></script>
-    <script src="js/router.js?v1.0.4"></script>
+    <script src="js/router.js?v1.0.5"></script>
     <script src="js/verifyCode.js?v1.0.0"></script>
     <!-- 自訂義js -->
     <script src="js/pageData.js?v1.0.1"></script>
