--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="VNC88, tỷ số bóng đá, kết quả trực tuyến,lịch thi đấu" />
-    <meta name="keywords" content="VNC88, tỷ số bóng đá, kết quả trực tuyến,lịch thi đấu">
+    <meta name="description" content="VNC88｜tỷ số bóng đá｜kết quả trực tuyến｜lịch thi đấu" />
+    <meta name="keywords" content="VNC88｜tỷ số bóng đá｜kết quả trực tuyến｜lịch thi đấu">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/all.css?v1.0.0">
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase.js"></script>
