--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- google插件 -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-30FY56KDHN"></script>
-
+    <meta name="google-site-verification" content="9rxDOoRfZpMOU6PNbZ_F2oIYifgyOBeCbJKhWFE-BgE" />
 </head>
 
 <body>
